# kumoy-qgis-plugin

./: .gitignore  CLAUDE.md  README.md  TRANSLATION.md  __init__.py  conftest.py  kumoy.pro  metadata.txt  plugin.py  plugin_version.py  pyproject.toml  pyqt_version.py  pyrightconfig.json  qgis_hub.pro  qgis_version.py  qgishub_plugin.py  read_version.py  sentry.py  settings_manager.py  strato.pro
.github/: copilot-instructions.md
browser/: root.py  styledmap.py  utils.py  vector.py
docs/: how-to-store-icons.md
i18n/: README.md  kumoy_ja.qm  kumoy_ja.ts  qgis_hub_ja.qm  qgis_hub_ja.ts  strato_ja.qm  strato_ja.ts
imgs/: __init__.py
kumoy/: auth_manager.py  constants.py  get_token.py
processing/: __init__.py  closeAllProcessingDialogs.py  closeDialogs.py  feature_uploader.py  field_name_normalizer.py  provider.py  upload_vector_algorithm.py  vector_creator.py
qgis_version/: README.md  __init__.py  compatibility.py
qgishub/: auth_manager.py  check_plan.py  config.py  constants.py  get_token.py
strato/: auth_manager.py  constants.py  get_token.py
tests/: conftest.py  test_compatibility.py  test_error.py  test_field_name_normalizer.py  test_field_name_normalizer_unit.py  test_get_geometry_type.py  test_maplibre_compatibility.py  test_metadata.py  test_normalize_field_name.py  test_plugin_version.py  test_qgis_basic.py  test_qgis_version.py  test_upload_vector.py
ui/: darkmode.py  dialog_account.py  dialog_config.py  dialog_config.ui  dialog_config_login_success.py  dialog_layer_add.py  dialog_layer_select.py  dialog_login.py  dialog_login_success.py  (+7 more)
(+109 files in other folders)
