[project]
name = "kumoy-qgis-plugin"
version = "0.1.0"
description = "QGIS plugin for Kumoy - Turn your QGIS into cloud-native"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "MIERUNE Inc.", email = "info@mierune.co.jp" }]
dependencies = []

[dependency-groups]
dev = ["pyqt5-stubs>=5.15.6.0", "pytest>=7.0", "ruff>=0.14.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = ["N802", "E501", "RUF001", "F401"]
